2008-06-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._componentDo): Change the components so they
	actually show up in the po files

2008-06-27  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_manager_component.py
	(TestComponentHeaven.testAttachDetachLinear): add missing reset.
	(TestComponentHeaven.testAttachDetachMultipleFeedersComplex): add
	a more complex test with multiple feeders and eaters in the same
	component.

2008-06-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py
	(AdminWindow._componentActivate): is unused, remove

2008-06-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py (AdminWindow._runWizard): Add
	missing space in error message.

2008-06-26  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* po/ca.po:
	Updated.

2008-06-26  Johan Dahlin  <johan@flumotion.com>


	* flumotion/admin/gtk/addformatwizard.py: Update the imports
	after the last change.

2008-06-25  Johan Dahlin  <johan@flumotion.com>

	* data/glade/Makefile.am:
	* data/glade/production-wizard.glade:
	* data/glade/scenario-wizard.glade:
	* flumotion/ui/sidebar.py:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/Makefile.am:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/ondemandstep.py:
	* flumotion/wizard/productionsteps.py:
	* flumotion/wizard/scenarios.py:
	* po/POTFILES.in:
	Add a Scenario Wizard page, refactor the logic
	to separate Scenario classes. Fixes #999

2008-06-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_manager_component.py: Add testing of
	component feed reconnections by ComponentHeaven.

2008-06-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/test_parts.py:
	(TestComponentsView.testCanNotStartWhenNoSelection)
	(TestComponentsView.testCanNotStopWhenNoSelection):
	Disable the last check as it we emit selection-changed in an idle now

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py: