@@ -1,3 +1,13 @@
+2008-06-28  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac:
+	  Check for Xvfb
+	* common/epydoc.mk:
+	  Newer epydoc introspects, so we run a temporary Xvfb server
+	  to handle gtk imports.
+	* flumotion.spec.in:
+	  BuildRequire Xvfb.
+
 2008-06-27  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/admin/gtk/adminwindow.py
